# podimo

./: .dockerignore  README.md  compose.example.yml  config.template.yaml  pyproject.toml
.github/workflows/: build-and-push-docker-image.yaml
docker/: Dockerfile  entrypoint.sh
podimo/: api.py  cli.py  client.py  config.py  logging_utils.py  main.py
